--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -50,6 +50,7 @@ key_bindings:
    - { key: F,        mods: Control,       action: ToggleFullscreen             }  
    - { key: V,        mods: Control|Shift, action: Paste                        }
    - { key: C,        mods: Control|Shift, action: Copy                         }
+   - { key: N,        mods: Control, action: SpawnNewInstance             }
   
 
 
