--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -41,6 +41,7 @@ WHEEL_UP     add volume 2
 WHEEL_DOWN    add volume -2 
 = add volume 2
 - add volume -2
+# Alt+j geometry  
 #WHEEL_LEFT    add volume -2
 #WHEEL_RIGHT   add volume 2
 
