--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -18,8 +18,10 @@ geometry=50%x50%
 
 alang=jpn,jp,eng,en
 volume-max=200
+volume=40
 
 ### Subtitles ### 
+slang=english,eng,en
 
 sub-ass-override=strip
 sub-ass-force-margins=yes
@@ -28,7 +30,7 @@ embeddedfonts=no
 sub-font=Qlassik
 sub-color="#ffffffff"
 sub-border-color="#00000000"
-sub-border-size=5
+sub-border-size=3
 sub-font-size=48
 sub-gray=yes
 sub-bold=yes
@@ -38,4 +40,6 @@ sub-bold=yes
 ### OSC ### 
 script-opts=osc-timetotal=yes,osc-layout=bottombar,osc-seekbarstyle=bar,osc-deadzonesize=0.5,osc-minmousemove=2,osc-hidetimeout=1000
 
-
+#osd-font-size=100
+#osd-scale=2
+#font_size=16
