--- a/.config/mpv/script-opts/webm.conf
+++ b/.config/mpv/script-opts/webm.conf
@@ -49,8 +49,8 @@ strict_audio_bitrate=64
 # raw (rawvideo/pcm_s16le).
 # mp3 (libmp3lame)
 # and gif
-output_format=webm-vp8
-twopass=yes
+output_format=mp4
+twopass=no
 # If set, applies the video filters currently used on the playback to the encode.
 apply_current_filters=yes
 # If set, writes the video's filename to the "Title" field on the metadata.
@@ -60,7 +60,7 @@ libvpx_threads=4
 additional_flags=
 # Constant Rate Factor (CRF). The value meaning and limits may change,
 # from codec to codec. Set to -1 to disable.
-crf=10
+crf=18
 # Useful for flags that may impact output filesize, such as qmin, qmax etc
 # Won't be applied when strict_filesize_constraint is on.
 non_strict_additional_flags=
