--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -55,11 +55,12 @@ separator =
 separator-foreground = ${colors.disabled}
 
 # font-0 = monospace;2
-font-0 = Hack;2
+font-0 = Hack Nerd Font;2
+
 
 modules-left = xworkspaces  
-modules-center = 
-modules-right = pulseaudio xkeyboard memory cpu date
+modules-center =battery-alt
+modules-right = xkeyboard pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -152,13 +153,21 @@ interval = 1
 date = %Y-%m-%d
 date-alt = It's %A, %d %B %Y
 
-time = at %I:%M %p
-time-alt = at %k:%M:%S
+time-alt = at %I:%M %p
+time = at %k:%M:%S
 
 # date-alt = %Y-%m-%d %I:%M:%S
 
 label = %date% %time%
 label-foreground = ${colors.primary}
+
+
+[module/battery-alt]
+type=custom/script
+exec= acpi | cut -d ' ' -f 4 | grep -E "*%" 2>/dev/null
+interval=30
+tail=true
+
 
 [module/testmodule]
 type = custom/script
@@ -170,4 +179,6 @@ click-left = exec notify-send "hello" "world"
 type = custom/text
 content = "test"
 click-left = exec notify-send "hello" "world"
+
+
 
