--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -37,7 +37,9 @@ font:
 hints:
   enabled:
    - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
-     command: firefox
+     # command: firefox
+     # # has to be abs path
+     command: { program: "/home/minno/.config/alacritty/scripts/copy_link.sh", args: []}  
      post_processing: true
      
      mouse:
@@ -47,22 +49,60 @@ hints:
 
 
 key_bindings:
-   - { key: F,        mods: Control,       action: ToggleFullscreen             }  
    - { key: V,        mods: Control|Shift, action: Paste                        }
    - { key: C,        mods: Control|Shift, action: Copy                         }
-   - { key: N,        mods: Control, action: SpawnNewInstance             }
-  
+   - { key: K,        mods: Control      , action: ScrollLineUp  }
+   - { key: J,        mods: Control      , action: ScrollLineDown  }
+   - { key: K,        mods: Control|Shift      , action: ScrollPageUp  }
+   - { key: J,        mods: Control|Shift      , action: ScrollPageDown  }
+     #   - { key: K,        mods: Control      , command: { program: "notify-send", args: ["uwu"] }  }
+     # - { key: J,        mods: Control      , command: "notify-send uwu"      }
+     
 
 
-import:
-    - ~/.config/alacritty/themes/themes/rose-pine.yaml 
-    #  - ~/.config/alacritty/themes/themes/monokai_charcoal.yaml 
 
-    # bad themes 
-    # - ~/.config/alacritty/themes/themes/cyber_punk_neon.yaml 
-    # - ~/.config/alacritty/themes/themes/dracula.yaml 
-    # - ~/.config/alacritty/themes/themes/hyper.yaml 
-    # - ~/.config/alacritty/themes/themes/cyber_punk_neon.yaml 
-    # - ~/.config/alacritty/themes/themes/cyber_punk_neon.yaml 
-    # - ~/.config/alacritty/themes/themes/cyber_punk_neon.yaml 
-    # - ~/.config/alacritty/themes/themes/cyber_punk_neon.yaml 
+# rose-pine color theme
+colors:
+   primary:
+     background: "0x191724"
+     foreground: "0xe0def4"
+   cursor:
+     text: "0xe0def4"
+     cursor: "0x524f67"
+   vi_mode_cursor:
+     text: "0xe0def4"
+     cursor: "0x524f67"
+   line_indicator:
+     foreground: None
+     background: None
+   selection:
+     text: "0xe0def4"
+     background: "0x403d52"
+   normal:
+     black: "0x26233a"
+     red: "0xeb6f92"
+     green: "0x31748f"
+     yellow: "0xf6c177"
+     blue: "0x9ccfd8"
+     magenta: "0xc4a7e7"
+     cyan: "0xebbcba"
+     white: "0xe0def4"
+   bright:
+     black: "0x6e6a86"
+     red: "0xeb6f92"
+     green: "0x31748f"
+     yellow: "0xf6c177"
+     blue: "0x9ccfd8"
+     magenta: "0xc4a7e7"
+     cyan: "0xebbcba"
+     white: "0xe0def4"
+   hints:
+     start:
+       foreground: "#908caa"
+       background: "#1f1d2e"
+     end:
+       foreground: "#6e6a86"
+       background: "#1f1d2e"
+          
+
+
