--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -58,9 +58,9 @@ separator-foreground = ${colors.disabled}
 font-0 = Hack Nerd Font;2
 
 
-modules-left = xworkspaces  
-modules-center =battery-alt
-modules-right = xkeyboard pulseaudio memory cpu date
+modules-left = xworkspaces xwindow  
+modules-center =battery-alt 
+modules-right = xkeyboard micmute pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -98,7 +98,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = "%title:0:60:...%"
 
 
 [module/pulseaudio]
@@ -154,7 +154,7 @@ date = %Y-%m-%d
 date-alt = It's %A, %d %B %Y
 
 time-alt = at %I:%M %p
-time = at %k:%M:%S
+time = %k:%M:%S
 
 # date-alt = %Y-%m-%d %I:%M:%S
 
@@ -165,15 +165,19 @@ label-foreground = ${colors.primary}
 [module/battery-alt]
 type=custom/script
 exec= acpi | cut -d ' ' -f 4 | grep -E "*%" 2>/dev/null
-interval=30
-tail=true
+interval=120
 
 
-[module/testmodule]
+[module/micmute]
 type = custom/script
-exec = echo "%{A1:notify-send "hello" "world":} clikable text %{A}"
-interval = 0
-click-left = exec notify-send "hello" "world"
+exec = ~/.config/polybar/scripts/mute_check.sh
+interval = 5
+click-left = exec ~/.config/i3/scripts/mutemic.sh 
+format-prefix = "Mic "
+format = <label>
+label = %output%
+format-foreground = ${colors.foreground}
+format-prefix-foreground = ${colors.primary}
 
 [module/testmodule2]
 type = custom/text
