--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -56,6 +56,22 @@ style = "Block"
 [font]
 size = 12.0
 
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.bold_italic]
+family = "JetBrainsMono Nerd Font"
+style = "Bold Italic"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
+style = "Italic"
+
+[font.normal]
+family = "JetBrainsMono Nerd Font"
+style = "Regular"
+
 [[hints.enabled]]
 post_processing = true
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-<>\"\\s{-}\\^⟨⟩`]+"
@@ -78,15 +94,15 @@ action = "Copy"
 key = "C"
 mods = "Control|Shift"
 
-[[keyboard.bindings]]
-action = "ScrollLineUp"
-key = "K"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "ScrollLineDown"
-key = "J"
-mods = "Control"
+# [[keyboard.bindings]]
+# action = "ScrollLineUp"
+# key = "K"
+# mods = "Control"
+# 
+# [[keyboard.bindings]]
+# action = "ScrollLineDown"
+# key = "J"
+# mods = "Control"
 
 [[keyboard.bindings]]
 action = "ScrollPageUp"
